css/mediaquery.css
/* tablets */
@media screen and (max-width: 800px) {
  /* general css  */
  .container {
    width: 100%;
    padding-left: 2rem;
    padding-right: 2rem;
    box-sizing: border-box;
  }

  .section-header {
    text-align: center;
  }

  .grid-container {
    grid-template-columns: 1fr;
  }

  .circles {
    display: none;
  }

  /* navigation */
  .nav-background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, 0.5);
    z-index: 0;
  }
  .nav-button {
    z-index: 3;
  }
  #navOpen {
    display: block;
  }

  .navigation {
    position: fixed;
    top: 0;
    right: 0px;
    background-color: var(--back-color);
    min-width: 30rem;
    height: 100%;
    flex-direction: column;
    align-items: center;
    padding: 0;
    padding-top: 35%;
    box-shadow: -5px -5px 20px var(--gray-color);
    /* don't show it by default */
    display: none;
    z-index: 2;
  }
  .navigation a {
    display: block;
    margin: 0 0 0 3rem;
    /* background-color: blue; */
    margin-bottom: 4rem;
    font-size: 2rem;
  }

  /* hero section */
  .hero-section {
    height: fit-content;
  }

  /* about section */
  .about-container {
    flex-direction: column;
  }
  .about-image {
    width: 13rem;
    margin-bottom: 2rem;
  }
  .about-paragraph {
    /* background-color: magenta; */
    margin: 0;
  }
}

/* mobiles */
@media screen and (max-width: 500px) {
  body {
    font-size: 1.5rem;
  }

  /* general css */
  .section-header {
    font-size: 2rem;
  }

  .nav {
    padding: 1rem;
  }

  .navigation {
    min-width: 15rem;
  }

  .navigation a {
    font-size: 1.5rem;
  }

  /* hero section */
  .title {
    font-size: 2.5rem;
    text-align: left;
  }

  /* skills section */
  .skill-card-text {
    line-height: 2rem;
  }
}

